# lifted-rpi

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
results/figures/: _gallery.html
scripts/: bench_clip_solutions.py  diagnose_far_check.py  generate_cpu_vs_gpu_figure.py  generate_figures.py  generate_speedup_figure.py  indomain_surrogate_test.py  run_pipeline.py
src/lifted_rpi/: __init__.py  convergence.py  disturbance.py  engine.py  gp_learner.py  initialization.py  iteration.py  minkowski_gpu.py  polytope.py  simulation.py  vset.py
src/lifted_rpi/plotting/: __init__.py  convergence_plots.py  gp_analysis.py  hull_3d.py  interactive.py  publication.py
src/lifted_rpi/speedup/: README.md  __init__.py  gpu_ops.py  surrogate.py
tests/: conftest.py  test_core.py
